--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 
 <p>There will be a mechanism to sync tags and actress based on file hash and video title.</p>
 
+<h2>Screenshot</h2>
+<img src="images/grid.jpg" />
+
+
 <h2>
 <a name="features-working" class="anchor" href="#features-working"><span class="octicon octicon-link"></span></a>Features working</h2>
 
@@ -107,6 +111,6 @@
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+
   </body>
 </html>
