--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/zenwong/tagu">View On GitHub</a></li>
-          <li class="downloads"><a href="windows/Tagu.zip">ZIP</a></li>
+          <li class="downloads"><a href="windows/Tagu.rar">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/zenwong/tagu/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
