--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <nav>
           <li class="fork"><a href="https://github.com/zenwong/tagu">View On GitHub</a></li>
           <li class="downloads"><a href="windows/Tagu.zip">ZIP</a></li>
+          <li class="downloads"><a href="windows/Tagu-32-bit.zip">ZIP</a></li>
           <li class="downloads"><a href="https://github.com/zenwong/tagu/tarball/master">TAR</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
