--- a/index.html
+++ b/index.html
@@ -4,56 +4,41 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Tagu by zenwong</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/zenwong/tagu">View On GitHub</a></li>
-          <li class="downloads"><a href="windows/Tagu.zip">ZIP</a></li>
-          <li class="downloads"><a href="windows/Tagu-32-bit.zip">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/zenwong/tagu/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1 class="header">Tagu</h1>
+        <p class="header">tag your files</p>
 
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/zenwong/tagu/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/zenwong/tagu/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/zenwong/tagu">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/zenwong">zenwong</a></p>
+
+
+      </header>
       <section>
-        <div id="title">
-          <h1>Tagu</h1>
-          <p>an organizer for JAV / Porn / Hentai</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/zenwong">zenwong</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>
-<a name="jav--porn--hentai-organizer" class="anchor" href="#jav--porn--hentai-organizer"><span class="octicon octicon-link"></span></a>JAV / Porn / Hentai Organizer</h1>
+<a id="organize-your-video-files-with-tags" class="anchor" href="#organize-your-video-files-with-tags" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Organize your video files with tags</h1>
 
-<p>a XBMC for porn</p>
-
-<p>The purpose of this project is to have a client that can download metadata about a JAV / Porn / Hentai video.  It will consist of a server and a client.</p>
+<p>The purpose of this project is to have a client that can download metadata about user tagged videos.  It will consist of a server and a client.</p>
 
 <p>There will be a mechanism to sync tags and actress based on file hash and video title.</p>
 
-<h2>Screenshot</h2>
-<img src="images/grid.jpg" />
-
-
 <h2>
-<a name="features-working" class="anchor" href="#features-working"><span class="octicon octicon-link"></span></a>Features working</h2>
+<a id="features-working" class="anchor" href="#features-working" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features working</h2>
 
 <ul>
 <li>Tagging</li>
@@ -63,55 +48,77 @@
 <li>Actress autocompletion</li>
 <li>Select directories to import into library</li>
 <li>Filtering by tag or actress</li>
-</ul><h2>
-<a name="features-planned" class="anchor" href="#features-planned"><span class="octicon octicon-link"></span></a>Features planned</h2>
-
-<ul>
+<li>Thumbnail generation</li>
 <li>Sync local database of tags to server</li>
 <li>Sync tags from server to local database</li>
+</ul>
+
+<h2>
+<a id="features-planned" class="anchor" href="#features-planned" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features planned</h2>
+
+<ul>
 <li>Sync covers of videos in your library</li>
-<li>Thumbnail generation</li>
 <li>Actress videography and info</li>
 <li>Duplicate detection</li>
 <li>Recommendations</li>
 <li>OpenCV face detection</li>
-<li>Subtitle sharing for JAV</li>
-</ul><h2>
-<a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
+</ul>
+
+<h2>
+<a id="requirements" class="anchor" href="#requirements" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Requirements</h2>
 
 <ul>
 <li><a href="http://qt-project.org">Qt5</a></li>
 <li><a href="http://www.sqlite.org">sqlite</a></li>
-<li><a href="http://www.boost.org">boost</a></li>
-<li><a href="https://code.google.com/p/ffmpegthumbnailer">ffmpegthumbnailer</a></li>
-</ul><h2>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+<li><a href="http://www.ffmpeg.org">FFMPEG</a></li>
+</ul>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
 
 <ul>
-<li>git submodule init</li>
-<li>git submodule update</li>
 <li>qmake</li>
 <li>make</li>
-<li>g++ -std=c++11 import.cpp -lboost_system -lboost_filesystem -lboost_regex -lsqlite3 -o import</li>
-<li>set db path on line 16 &amp; 48 of MainWindow.cpp</li>
-</ul><h2>
-<a name="importing-files-into-library" class="anchor" href="#importing-files-into-library"><span class="octicon octicon-link"></span></a>Importing files into library</h2>
+</ul>
 
-<p>To import files into the library, edit dirs to include the folders that you want imported.  It's recursive so just specify the top level, one directory per line:</p>
+<h2>
+<a id="importing-videos-into-library" class="anchor" href="#importing-videos-into-library" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Importing Videos into library</h2>
 
-<ul>
-<li>/mnt/disk1/porn</li>
-<li>/mnt/disk2/jav</li>
-</ul><p>Compile either or both:</p>
+<p>To import videos into the database</p>
 
 <ul>
-<li>import-jav.cpp to import JAV videos.</li>
-<li>import-porn.cpp to import Porn videos.</li>
-</ul><p>the only difference is a regex to detect correctly named JAV files.</p>
+<li>menu &gt; general &gt; options &gt; select a folder under "Images Folder" (this folder is where thumbnails are stored)</li>
+<li>menu &gt; general &gt; options &gt; add top level directory to videos</li>
+<li>menu &gt; database &gt; import videos</li>
+</ul>
+
+<p>The import will not copy or move any files, it will just insert file name, file path, and file hash into the database.</p>
+
+<h2>
+<a id="add-tags-to-videos" class="anchor" href="#add-tags-to-videos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add Tags to Videos</h2>
+
+<ul>
+<li>click a video in the file listing</li>
+<li>select a tag under the tag combobox / type a new tag into the tag combobox</li>
+<li>the new tag will appear under the tag list</li>
+<li>double click a tag in the tag list to remove a tag from a video</li>
+</ul>
+
+<h2>
+<a id="add-actress-to-videos" class="anchor" href="#add-actress-to-videos" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Add Actress to Videos</h2>
+
+<ul>
+<li>click a video in the file listing</li>
+<li>select an actress under the Actress combobox / type a new actress into the actress combobox</li>
+<li>the new actress will appear in the actress list</li>
+<li>double click an actress in the actress list to remove an actress from a video</li>
+</ul>
       </section>
-
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-
+		
   </body>
 </html>
